Fix bug where content was wider than viewport, causing horizontal scrolling

--- a/assets/scss/_layout.scss
+++ b/assets/scss/_layout.scss
@@ -6,7 +6,7 @@ body {
 }
 
 header {
-  padding: $spacing * 3 $spacing $spacing $spacing;
+  padding: ($spacing * 3 + 2px) $spacing $spacing + 2.5px $spacing;
 
   [class$="inner"] {
     @include page-width;
